--- a/site_ViveBio/src/views/products/productAll.ejs
+++ b/site_ViveBio/src/views/products/productAll.ejs
@@ -103,8 +103,11 @@
                                                                 class="fa-solid fa-pen"></i></a>
                                                         <% } %>
                                                             <% } %>
-                                                                <a href="/products/Card/<%= id %>"><i class="fa-solid fa-eye" title="Ver producto"></i></a>
-                                                                <a href="/productCarrito.html" class="add-cart">Quiero! 🛒</a>
+                                                                <a href="/products/Card/<%= id %>"><i
+                                                                        class="fa-solid fa-eye"
+                                                                        title="Ver producto"></i></a>
+                                                                <a href="/productCarrito.html" class="add-cart">Quiero!
+                                                                    🛒</a>
                                                                 <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
                                                                 <a href="#"><i class="fa-solid fa-star"></i></a>
                                             </div>
@@ -177,6 +180,8 @@
 
             <%- include('../partials/footer') %>
                 <script src="/javascript/menuMobile.js"></script>
+                <script src="/javascript/navEmergent.js"></script>
+
     </body>
 
 </html>
