--- a/site_ViveBio/src/views/users/login.ejs
+++ b/site_ViveBio/src/views/users/login.ejs
@@ -76,6 +76,7 @@
                     </section>
         </main>
         <script src="/javascript/menuMobile.js"></script>
+        <script src="/javascript/navEmergent.js"></script>
     </body>
 
 </html>
