--- a/site_ViveBio/src/views/index.ejs
+++ b/site_ViveBio/src/views/index.ejs
@@ -102,6 +102,7 @@
             <%- include('./partials/footer') %>
                 <script type="text/javascript" src="/javascript/carrusel.js"></script>
                 <script src="/javascript/menuMobile.js"></script>
+                <script src="/javascript/navEmergent.js"></script>
     </body>
 
 </html>
