--- a/site_ViveBio/src/views/products/productCart.ejs
+++ b/site_ViveBio/src/views/products/productCart.ejs
@@ -63,7 +63,8 @@
                 </section>
             </main>
             <%- include('../partials/footer') %>
-            <script src="/javascript/menuMobile.js"></script>
+                <script src="/javascript/menuMobile.js"></script>
+                <script src="/javascript/navEmergent.js"></script>
     </body>
 
 </html>
