--- a/site_ViveBio/src/views/products/productSearch.ejs
+++ b/site_ViveBio/src/views/products/productSearch.ejs
@@ -26,10 +26,14 @@
                                         <%= product.price %> $
                                     </h4>
                                     <% if (product.discount) { %>
-                                        <p><%= product.price - (product.price * product.discount / 100) %> $ </p>
-                                    <% }else{ %>
-                                        <p><%= product.price %> $ </p>
-                                    <% } %> 
+                                        <p>
+                                            <%= product.price - (product.price * product.discount / 100) %> $
+                                        </p>
+                                        <% }else{ %>
+                                            <p>
+                                                <%= product.price %> $
+                                            </p>
+                                            <% } %>
                                 </div>
                                 <div class="verart__home">
                                     <a href="/Products/Card/<%= product.id %>">Ver mas</a>
@@ -43,6 +47,8 @@
                                     <% } %>
             </main>
             <%- include('../partials/footer') %>
+                <script src="/javascript/menuMobile.js"></script>
+                <script src="/javascript/navEmergent.js"></script>
     </body>
 
 </html>
