--- a/site_ViveBio/src/views/users/editProfile.ejs
+++ b/site_ViveBio/src/views/users/editProfile.ejs
@@ -70,6 +70,7 @@
             </main>
     </body>
     <%- include('../partials/footer') %>
-        <script src="/javascript/menuMobile.js"></script>
+    <script src="/javascript/menuMobile.js"></script>
+    <script src="/javascript/navEmergent.js"></script>
 
 </html>
