Product: models finished, controllers & relations incomplete

--- a/site_ViveBio/src/views/products/addProducts.ejs
+++ b/site_ViveBio/src/views/products/addProducts.ejs
@@ -36,6 +36,10 @@
                                     <input class="add_input" type="number" id="discount" name="discount" style="padding:5px;">
                                 </div>
                                 <div class="add_form-box">
+                                    <label for="stock">Stock</label>
+                                    <input class="add_input" type="number" id="stock" name="stock" style="padding:5px;">
+                                </div>
+                                <div class="add_form-box">
                                     <label for="image">Imagen</label>
                                     <input class="add_input" type="file" id="image"  name="image" accept="image/*" multiple>
                                 </div>
