--- a/site_ViveBio/src/views/index.ejs
+++ b/site_ViveBio/src/views/index.ejs
@@ -56,7 +56,6 @@
                 </div>
                 <section class="sect1">
                     <% products.forEach(product=> { %>
-                        <% if (product.dest) { %>
                             <article class="art__home">
                                 <div class="nombreart__home">
                                     <h1>
@@ -64,7 +63,7 @@
                                     </h1>
                                 </div>
                                 <div class="imgart__home">
-                                    <img src="/images/<%= product.image %>" alt="">
+                                    <img src="/images/<%= product.productImages[0].name %>" alt="">
                                 </div>
                                 <div class="precio">
                                     <h4>
@@ -78,7 +77,6 @@
                                     <a href="/products/Card/<%= product.id %>">Ver mas</a>
                                 </div>
                             </article>
-                            <% } %>
                                 <% }) %>
                 </section>
                 <div class='nombre-categorias__home'>
