--- a/site_ViveBio/src/views/products/productAll.ejs
+++ b/site_ViveBio/src/views/products/productAll.ejs
@@ -9,12 +9,12 @@
                 <section class="main">
                     <h2 class="titulares" id="BioCapilar">BioCapilar</h2>
                     <section class="row">
-                        <% bioCapilar.forEach(({id,name,price,discount,property,image})=> { %>
+                        <% bioCapilar.forEach(({id,name,price,discount,property,productImages})=> { %>
                             <article>
                                 <div class="card estilo-c">
                                     <div class="img-container">
                                         <a href="/products/Card/<%= id %>">
-                                            <img src="/images/<%= image[0] %>" alt="producto">
+                                            <img src="/images/<%= productImages[0].name %>" alt="producto">
                                         </a>
                                         <span class="promo">
                                             <%= discount %>% off
@@ -31,7 +31,7 @@
                                                 <%= category.name %>
                                             </h4>
                                             <h6 class="rating">⭐⭐⭐⭐</h6>
-                                            <span>-<%= property %> -</span>
+                                            <span>-<%= property.name %> -</span>
                                             <p>
                                                 $ <% if (discount) { %>
                                                     <%= toThousand(price - (price * discount / 100)) %>
@@ -64,12 +64,12 @@
                     </section>
                     <h2 class="titulares" id="BioCorporal">BioCorporal</h2>
                     <section class="row">
-                        <% bioCorporal.forEach(({id,name,price,discount,property,image})=> { %>
+                        <% bioCorporal.forEach(({id,name,price,discount,property,productImages})=> { %>
                             <article>
                                 <div class="card estilo-c">
                                     <div class="img-container">
                                         <a href="/products/Card/<%= id %>">
-                                            <img src="/images/<%= image %>" alt="producto">
+                                            <img src="/images/<%= productImages[0].name %>" alt="producto">
                                         </a>
                                         <span class="promo">
                                             <%= discount %>% off
@@ -86,7 +86,7 @@
                                                 <%= category.name %>
                                             </h4>
                                             <h6 class="rating">⭐⭐⭐⭐</h6>
-                                            <span>-<%= property %> -</span>
+                                            <span>-<%= property.name %> -</span>
                                             <p>
                                                 $ <% if (discount) { %>
                                                     <%= toThousand(price - (price * discount / 100)) %>
@@ -116,12 +116,12 @@
                     </section>
                     <h2 class="titulares" id="BioSpa">BioSpa</h2>
                     <section class="row">
-                        <% bioSpa.forEach(({id,name,price,discount,property,image})=> { %>
+                        <% bioSpa.forEach(({id,name,price,discount,property,productImages})=> { %>
                             <article>
                                 <div class="card estilo-c">
                                     <div class="img-container">
                                         <a href="/products/Card/<%= id %>">
-                                            <img src="/images/<%= image %>" alt="producto">
+                                            <img src="/images/<%= productImages[0].name %>" alt="producto">
                                         </a>
                                         <span class="promo">
                                             <%= discount %>% off
@@ -138,7 +138,7 @@
                                                 <%= category.name %>
                                             </h4>
                                             <h6 class="rating">⭐⭐⭐⭐</h6>
-                                            <span>-<%= property %> -</span>
+                                            <span>-<%= property.name %> -</span>
                                             <p>
                                                 $ <% if (discount) { %>
                                                     <%= toThousand(price - (price * discount / 100)) %>
