--- a/site_ViveBio/src/views/products/productAll.ejs
+++ b/site_ViveBio/src/views/products/productAll.ejs
@@ -9,12 +9,12 @@
                 <section class="main">
                     <h2 class="titulares" id="BioCapilar">BioCapilar</h2>
                     <section class="row">
-                        <% bioCapilar.forEach(({id,name,price,discount,property,image})=> { %>
+                        <% bioCapilar.forEach(({id,name,price,discount,properties,productimages,categories})=> { %>
                             <article>
                                 <div class="card estilo-c">
                                     <div class="img-container">
                                         <a href="/products/Card/<%= id %>">
-                                            <img src="/images/<%= image[0] %>" alt="producto">
+                                            <img src="/images/<%= productimages[0].name %>" alt="producto">
                                         </a>
                                         <span class="promo">
                                             <%= discount %>% off
@@ -28,15 +28,15 @@
                                                 </h2>
                                             </a>
                                             <h4>
-                                                <%= category.name %>
+                                                <%= categories.name %>
                                             </h4>
                                             <h6 class="rating">⭐⭐⭐⭐</h6>
-                                            <span>-<%= property %> -</span>
+                                            <span>-<%= properties.name %> -</span>
                                             <p>
                                                 $ <% if (discount) { %>
                                                     <%= toThousand(price - (price * discount / 100)) %>
                                                         <% }else{ %>
-                                                            <%= toThousand(product.price) %>
+                                                            <%= toThousand(price) %>
                                                                 <% } %>
                                             </p>
                                         </div>
@@ -64,12 +64,12 @@
                     </section>
                     <h2 class="titulares" id="BioCorporal">BioCorporal</h2>
                     <section class="row">
-                        <% bioCorporal.forEach(({id,name,price,discount,property,image})=> { %>
+                        <% bioCorporal.forEach(({id,name,price,discount,properties,productimages,categories})=> { %>
                             <article>
                                 <div class="card estilo-c">
                                     <div class="img-container">
                                         <a href="/products/Card/<%= id %>">
-                                            <img src="/images/<%= image %>" alt="producto">
+                                            <img src="/images/<%= productimages[0].name %>" alt="producto">
                                         </a>
                                         <span class="promo">
                                             <%= discount %>% off
@@ -83,15 +83,15 @@
                                                 </h2>
                                             </a>
                                             <h4>
-                                                <%= category.name %>
+                                                <%= categories.name %>
                                             </h4>
                                             <h6 class="rating">⭐⭐⭐⭐</h6>
-                                            <span>-<%= property %> -</span>
+                                            <span>-<%= properties.name %> -</span>
                                             <p>
                                                 $ <% if (discount) { %>
                                                     <%= toThousand(price - (price * discount / 100)) %>
                                                         <% }else{ %>
-                                                            <%= toThousand(product.price) %>
+                                                            <%= toThousand(price) %>
                                                                 <% } %>
                                             </p>
                                         </div>
@@ -119,12 +119,12 @@
                     </section>
                     <h2 class="titulares" id="BioSpa">BioSpa</h2>
                     <section class="row">
-                        <% bioSpa.forEach(({id,name,price,discount,property,image})=> { %>
+                        <% bioSpa.forEach(({id,name,price,discount,properties,productimages,categories})=> { %>
                             <article>
                                 <div class="card estilo-c">
                                     <div class="img-container">
                                         <a href="/products/Card/<%= id %>">
-                                            <img src="/images/<%= image %>" alt="producto">
+                                            <img src="/images/<%= productimages[0].name %>" alt="producto">
                                         </a>
                                         <span class="promo">
                                             <%= discount %>% off
@@ -138,15 +138,15 @@
                                                 </h2>
                                             </a>
                                             <h4>
-                                                <%= category.name %>
+                                                <%= categories.name %>
                                             </h4>
                                             <h6 class="rating">⭐⭐⭐⭐</h6>
-                                            <span>-<%= property %> -</span>
+                                            <span>-<%= properties.name %> -</span>
                                             <p>
                                                 $ <% if (discount) { %>
                                                     <%= toThousand(price - (price * discount / 100)) %>
                                                         <% }else{ %>
-                                                            <%= toThousand(product.price) %>
+                                                            <%= toThousand(price) %>
                                                                 <% } %>
                                             </p>
                                         </div>
