--- a/site_ViveBio/src/views/products/productCart.ejs
+++ b/site_ViveBio/src/views/products/productCart.ejs
@@ -72,7 +72,7 @@
             </main>
             <%- include('../partials/footer') %>
                 <script src="/javascript/menuMobile.js"></script>
-                <script src="/javascript/navEmergent.js"></script>
+                <!-- <script src="/javascript/navEmergent.js"></script> -->
     </body>
 
 </html>
